@@ -1291,78 +1291,11 @@ int denora_event_fakehost(char *source, int ac, char **av)
 
 int denora_event_clearmode(char *source, int ac, char **av)
 {
-	Channel *c;
-	char mode, *newav[2];
-	int i, p = 1;
-
     if (denora->protocoldebug) {
         protocol_debug(source, ac, av);
     }
 
-    if (ac != 2) {
-    	alog(LOG_ERROR, "Invalid number of arguments passed to denora_event_clearmode");
-    	return MOD_CONT;
-    }
-
-    newav[0] = av[0];
-    newav[1] = sstrdup("-");
-    c = findchan(av[0]);
-    if (c) {
-		while ((mode = *av[1]++)) {
-			switch (mode) {
-			case 'b': /* remove all bans */
-				for (i = 0; i < c->bancount; ++i) {
-					if (c->bans[i]) {
-						free(c->bans[i]);
-					} else {
-						alog(LOG_ERROR, langstr(ALOG_BAN_FREE_ERROR), c->name, i);
-					}
-				}
-				if (denora->do_sql) sql_channel_ban(ALL, c, NULL);
-				break;
-			case 'e': /* remove all ban exceptions */
-				for (i = 0; i < c->exceptcount; ++i) {
-					if (c->excepts[i]) {
-						free(c->excepts[i]);
-					} else {
-						alog(LOG_ERROR, langstr(ALOG_EXCEPTION_FREE_ERROR),
-							 c->name, i);
-					}
-				}
-				if (denora->do_sql) sql_channel_exception(ALL, c, NULL);
-				break;
-			case 'o': /* remove all ops */
-				if (denora->do_sql) {
-					rdb_query
-						(QUERY_LOW,
-						 "UPDATE %s SET mode_lo=\'N\' WHERE chanid=%d",
-						 IsOnTable, c->sqlid);
-				}
-				break;
-			case 'h': /* remove all halfops */
-				if (denora->do_sql) {
-					rdb_query
-						(QUERY_LOW,
-						 "UPDATE %s SET mode_lh=\'N\' WHERE chanid=%d",
-						 IsOnTable, c->sqlid);
-				}
-				break;
-			case 'v': /* remove all voices */
-				if (denora->do_sql) {
-					rdb_query
-						(QUERY_LOW,
-						 "UPDATE %s SET mode_lv=\'N\' WHERE chanid=%d",
-						 IsOnTable, c->sqlid);
-				}
-				break;
-			default:
-				newav[1][p++] = mode;
-			}
-		}
-		/* remove all given modes */
-		do_cmode(source, 2, newav);
-    }
-
+    chan_clearmodes(source, ac, av);
     return MOD_CONT;
 }
 
