@@ -4,6 +4,7 @@ Denora v1.4.4-SVN
 -----------------
 
 Additions
+09/09/08 r313 Added chan_clearmodes function to clear given chanmodes
 09/09/07 r311 Added support for Nefarious 1.3 in nefarious module [closes #564]
 
 Changes
